--- a/.env
+++ b/.env
@@ -1,7 +1,18 @@
+# Configuration MySQL existante
 DB_NAME=maxit2
 DB_DSN=mysql:host=localhost;port=3306;dbname=maxit2
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=3306
 DB_CHARSET=utf8
 DB_PASS=bamba
 DB_USER=root
+BASE_DSN=mysql:host=localhost;port=3306
+
+# Configuration PostgreSQL
+PG_DB_NAME=maxitsa_db
+PG_DB_DSN=pgsql:host=localhost;port=5432;dbname=maxitsa_db
+PG_DB_HOST=localhost
+PG_DB_PORT=5432
+PG_DB_CHARSET=utf8
+PG_DB_PASS=password123
+PG_DB_USER=maxitsa_user
