--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
+# Configuration générale
+DB_DRIVER=mysql
+
 # Configuration MySQL existante
-DB_NAME=maxit2
-DB_DSN=mysql:host=localhost;port=3306;dbname=maxit2
+DB_NAME=maxit4
+DB_DSN=mysql:host=localhost;port=3306;dbname=maxit4
 DB_HOST=localhost
 DB_PORT=3306
 DB_CHARSET=utf8
